src/objects/Training__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Trainings</relationshipLabel>
        <relationshipName>Trainings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>The_Name__c</fullName>
        <label>The Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>The_Picklist__c</fullName>
        <label>The Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Three</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training</label>
        <referenceTo>Training__c</referenceTo>
        <relationshipLabel>Trainings</relationshipLabel>
        <relationshipName>Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Training</label>
    <nameField>
        <label>Training Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trainings</pluralLabel>
    <recordTypes>
        <fullName>Standard_Training</fullName>
        <active>true</active>
        <label>Standard Training</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Trainingaa</fullName>
        <active>true</active>
        <label>Standard Trainingaa</label>
    </recordTypes>
    <recordTypes>
        <fullName>Super_Training</fullName>
        <active>true</active>
        <label>Super Training</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>